# HomeAutomation

./: install.sh
PcSoftware/Atom1.5/: Atom.kdev4  Atom1_5.kdev4  CMakeLists.txt  INSTALL  atom.conf  atom.conf.template  build_and_install.sh
PcSoftware/Atom1.5/.kdev4/: Atom.kdev4
PcSoftware/Atom1.5/debian/: control  copyright
PcSoftware/Atom1.5/php/examples/light/: tcp.php
PcSoftware/Atom1.5/script/common/: irrecord.js  json.js
PcSoftware/Atom1.5/script/interface/: PID.js  RRD_Tool.js  Touch.js  counter.js  dimmer.js  display.js  eggdrop.js  g_display.js  http.js  irin.js  irout.js  lgtv.js  list.js  output.js  rotary.js  sensor.js
PcSoftware/Atom1.5/script/legacy/: Autostart.js.template
PcSoftware/Atom1.5/script/legacy/Can/: DS18x20.js  FOST02.js  Rotary.js  SimpleDTMF.js  TCN75A.js  hwPWM.js  input.js  power.js
PcSoftware/Atom1.5/script/legacy/Logic/: LED_dimmer.js  MenuItem.js  SensorPrint.js
PcSoftware/Atom1.5/script/legacy/Other/: EggdropIRCpost.js
PcSoftware/Atom1.5/script/legacy/System/: CanManager.js  HTTP.js  IntelHex.js  Socket.js  TextTable.js
PcSoftware/Atom1.5/script/manager/: ir.js  tracker.js
PcSoftware/Atom1.5/script/module/: BusVoltage.js  Dimmer230.js  dimmer.js  display.js  irReceive.js  irTransmit.js  irin.js  irout.js  serial.js
PcSoftware/Atom1.5/script/plugin/: console.js  mbb.js  module.js  mysql.js  node.js  socket.js  storage.js  system.js  timer.js  xorg.js
PcSoftware/Atom1.5/script/user/: autostart.js  test.js
PcSoftware/Atom1.5/src/: CMakeLists.txt  atomd.cpp  atomic.cpp  config.h.in  main.cpp
PcSoftware/Atom1.5/src/broker/: Message.cpp  Message.h  Subscriber.h
PcSoftware/Atom1.5/src/can/: CanDaemon.cpp  CanDaemon.h  Manager.cpp  Manager.h  Message.h  Module.cpp  Module.h  Monitor.cpp  Monitor.h  Network.cpp  Network.h  Node.cpp  Node.h  Protocol.cpp  Protocol.h
PcSoftware/Atom1.5/src/common/: Bitset.cpp  Byteset.cpp  IoService.cpp  IoService.h  common.cpp  common.h  exception.h  log.cpp  log.h
PcSoftware/Atom1.5/src/config/: Manager.cpp  Manager.h
PcSoftware/Atom1.5/src/control/: Code.cpp  Code.h  Manager.cpp  Manager.h  Module.cpp  Node.cpp  Node.h
PcSoftware/Atom1.5/src/logging/: Logger.cpp  Logger.h
PcSoftware/Atom1.5/src/mbb/: Manager.cpp
PcSoftware/Atom1.5/src/net/: Client.cpp  Client.h  GetFile.cpp  GetFile.h  Manager.cpp  Manager.h  SerialClient.cpp  SerialClient.h  Subscriber.cpp  Subscriber.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  UdpClient.cpp  UdpClient.h  Url.cpp  types.h
PcSoftware/Atom1.5/src/storage/: Manager.h  Store.cpp  Store.h
PcSoftware/Atom1.5/src/timer/: Manager.cpp  Manager.h  Subscriber.h  Timer.h
PcSoftware/Atom1.5/src/type/: Bitset.h  Byteset.cpp  Byteset.h  common.h
PcSoftware/Atom1.5/src/vm/: CMakeLists.txt  Manager.cpp  Manager.h  Plugin.cpp  Plugin.h  types.h
PcSoftware/Atom1.5/src/vm/plugin/: Console.cpp  Console.h  JsPipe.cpp  JsPipe.h  Mbb.cpp  Module.cpp  Module.h  MySql.cpp  MySql.h  Node.cpp  Node.h  Server.h  Socket.cpp  Socket.h  Storage.cpp  Storage.h  System.cpp  System.h  Timer.cpp  Xorg.cpp  Xorg.h
PcSoftware/Atom1.5/src/xml/: Node.cpp  Node.h
PcSoftware/Atom1.5/storage/: RemoteList  Remote_LG_MKJ42519615  Remote_Leadtek_PVR2000  Remote_Yamaha_RAV34
PcSoftware/Atom1.5/uscript/: CLCD_Display.js  RRD_Tool.js  TouchPanel.js  bedroomDisplay.js  skohylla.js
PcSoftware/Atom1.5/uscript/cLCD_MenuItems/: DimmerMenuItem.js  DtmfMenuItem.js  HDMISwitchMenuItem.js  MainMenuItem.js  SensorMenuItem.js
trunk/PcSoftware/Atom1.5/: CMakeLists.txt  INSTALL  atom.conf  atom.conf.template  build_and_install.sh
trunk/PcSoftware/Atom1.5/.kdev4/: Atom.kdev4  Atom1_5.kdev4
trunk/PcSoftware/Atom1.5/debian/: control  copyright  rules
trunk/PcSoftware/Atom1.5/script/common/: alias.js  nice_functions.js
trunk/PcSoftware/Atom1.5/script/interface/: PID.js  RRD_Tool.js  counter.js  dimmer.js  display.js  g_display.js  http.js  input.js  irin.js  irout.js  list.js  power.js  sensor.js  softPWM.js  water.js  xbmc.js
trunk/PcSoftware/Atom1.5/script/legacy/: Autostart.js
trunk/PcSoftware/Atom1.5/script/manager/: ir.js  tracker.js
trunk/PcSoftware/Atom1.5/script/module/: BusVoltage.js  Dimmer230.js  HD44789.js  SimpleDTMF.js  dimmer.js  irReceive.js  irTransmit.js  irin.js  irout.js  sensor.js  serial.js
trunk/PcSoftware/Atom1.5/script/plugin/: console.js  jspipe.js  mbb.js  module.js  mqtt.js  node.js  socket.js  storage.js  system.js  timer.js  xorg.js
trunk/PcSoftware/Atom1.5/script/user/: autostart.js  test.js
trunk/PcSoftware/Atom1.5/src/: CMakeLists.txt  atomd.cpp  atomic.cpp  config.h.in  main.cpp
trunk/PcSoftware/Atom1.5/src/broker/: Manager.cpp  Manager.h  Message.cpp  Message.h  Subscriber.cpp
trunk/PcSoftware/Atom1.5/src/can/: CanDaemon.cpp  CanDaemon.h  Forward.cpp  Forward.h  Manager.cpp  Manager.h  Message.cpp  Module.cpp  Monitor.cpp  Monitor.h  Network.cpp  Network.h  Node.h  Protocol.cpp  Protocol.h
trunk/PcSoftware/Atom1.5/src/common/: Bitset.cpp  Bitset.h  Byteset.cpp  Byteset.h  IoService.h  common.cpp  common.h  exception.h  log.cpp  log.h
trunk/PcSoftware/Atom1.5/src/config/: Manager.cpp  Manager.h
trunk/PcSoftware/Atom1.5/src/control/: Code.cpp  Code.h  Manager.cpp  Manager.h  Module.h  Node.cpp  Node.h
trunk/PcSoftware/Atom1.5/src/logging/: Logger.cpp  Logger.h
trunk/PcSoftware/Atom1.5/src/mbb/: Manager.cpp  Manager.h
trunk/PcSoftware/Atom1.5/src/net/: Client.cpp  Client.h  Makefile  Manager.cpp  Manager.h  SerialClient.cpp  SerialClient.h  Subscriber.cpp  Subscriber.h  TcpClient.cpp  TcpClient.h  TcpServer.h  UdpClient.cpp  UdpClient.h  Url.h  types.h
trunk/PcSoftware/Atom1.5/src/storage/: Manager.cpp  Manager.h  Store.cpp  Store.h
trunk/PcSoftware/Atom1.5/src/timer/: Manager.cpp  Manager.h  Subscriber.cpp  Timer.cpp  Timer.h  types.h
trunk/PcSoftware/Atom1.5/src/type/: Bitset.cpp  Bitset.h  Byteset.cpp
trunk/PcSoftware/Atom1.5/storage/: RRD_Tool_config  Remote_LG_MKJ42519615  Remote_Roomba  Xorg_Keymap
trunk/PcSoftware/Atom1.5/uscript/: CLCD_Display.js  TouchPanel.js  badrumsdimmer.js  skohylla.js
(+2666 files in other folders)
